# rahil-clm

./: .gitignore  README.md  clm50_params.c240207b.nc  finalized_params_for_run.xlsx  pyproject.toml
.github/workflows/: pypi-publish.yml
examples/: run_generate.py
src/rahil/: __init__.py
src/rahil/clm/: __init__.py  core.py  plotting.py
